src/objects/Medical_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Questionnaires</relationshipLabel>
        <relationshipName>Medical_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allergies_Adverse_Reactions__c</fullName>
        <inlineHelpText>Do you have any allergies or adverse reactions?</inlineHelpText>
        <label>Allergies/Adverse Reactions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anaphylactic_shock__c</fullName>
        <inlineHelpText>Have you ever experienced Anaphylactic shock?</inlineHelpText>
        <label>Anaphylactic Shock?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anesthesia_complication__c</fullName>
        <inlineHelpText>Has anyone in your immediate family had anesthesia complication?</inlineHelpText>
        <label>Anesthesia complications?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Surgeries_in_the_Past_3_Months__c</fullName>
        <label>Any Surgeries in the Past 3 Months?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_blood_transfusions__c</fullName>
        <inlineHelpText>Have you ever had a blood transfusion?</inlineHelpText>
        <label>Any blood transfusions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_hospitalizations__c</fullName>
        <inlineHelpText>Have you ever been hospitalized for anything other than surgery?</inlineHelpText>
        <label>Any Hospitalizations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bleeding_disorders__c</fullName>
        <inlineHelpText>Has anyone in your immediate family had a bleeding disorder?</inlineHelpText>
        <label>Bleeding disorders?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bleeding_issues__c</fullName>
        <inlineHelpText>Do you have a history of bleeding or bleeding tendencies?</inlineHelpText>
        <label>Bleeding issues?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Medical Questionnaires</relationshipLabel>
        <relationshipName>Medical_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clotting_disorders__c</fullName>
        <inlineHelpText>Has anyone in your immediate family had a clotting disorder?</inlineHelpText>
        <label>Clotting disorders?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_medical_conditions__c</fullName>
        <inlineHelpText>Are you currently being treated for any medical conditions?</inlineHelpText>
        <label>Current medical conditions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_anesthesia_complications__c</fullName>
        <description>Has anyone in your immediate family had anesthesia complication?</description>
        <inlineHelpText>Has anyone in your immediate family had anesthesia complication?</inlineHelpText>
        <label>Describe anesthesia complications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_allergies_adverse_reactions__c</fullName>
        <description>Allergies/Adverse Reactions</description>
        <label>Describe any allergies adverse reactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_bleeding_issues__c</fullName>
        <description>Do you have a history of bleeding or bleeding tendencies?</description>
        <inlineHelpText>Do you have a history of bleeding or bleeding tendencies?</inlineHelpText>
        <label>Describe any bleeding issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_blood_transfusions__c</fullName>
        <description>Have you ever had a blood transfusion?</description>
        <inlineHelpText>Have you ever had a blood transfusion?</inlineHelpText>
        <label>Describe any blood transfusions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_history_of_cancer__c</fullName>
        <description>Has anyone in your immediate family had cancer?</description>
        <inlineHelpText>Has anyone in your immediate family had cancer?</inlineHelpText>
        <label>Describe any history of cancer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_reaction_to_latex_betadine__c</fullName>
        <description>Latex, betadine, or tape allergy</description>
        <inlineHelpText>Latex, betadine, or tape allergy</inlineHelpText>
        <label>Describe any reaction to latex/betadine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_average_alcohol_consumption__c</fullName>
        <label>Describe average alcohol consumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_bleeding_disorders__c</fullName>
        <description>Has anyone in your immediate family had a bleeding disorder?</description>
        <inlineHelpText>Has anyone in your immediate family had a bleeding disorder?</inlineHelpText>
        <label>Describe bleeding disorders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_clotting_disorders__c</fullName>
        <description>Has anyone in your immediate family had a clotting disorder?</description>
        <inlineHelpText>Has anyone in your immediate family had a clotting disorder?</inlineHelpText>
        <label>Describe clotting disorders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_history_of_blood_clots__c</fullName>
        <description>Have you ever had a blood clot?</description>
        <inlineHelpText>Have you ever had a blood clot?</inlineHelpText>
        <label>Describe history of blood clots</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_history_of_operations__c</fullName>
        <description>Have you had any previous operations including plastic surgery?</description>
        <inlineHelpText>Have you had any previous operations including plastic surgery?</inlineHelpText>
        <label>Describe history of operations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_hospitalizations__c</fullName>
        <description>Have you ever been hospitalized for anything other than surgery?</description>
        <inlineHelpText>Have you ever been hospitalized for anything other than surgery?</inlineHelpText>
        <label>Describe hospitalizations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_recreational_drug_use__c</fullName>
        <description>Do you occasionally use recreational drugs?</description>
        <inlineHelpText>Do you occasionally use recreational drugs?</inlineHelpText>
        <label>Describe recreational drug use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_surgeries_in_the_past_3_months__c</fullName>
        <label>Describe surgeries in the past 3 months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_your_history_of_diabetes__c</fullName>
        <description>Do you have a history of diabetes or pre diabetes?</description>
        <inlineHelpText>Do you have a history of diabetes or pre diabetes?</inlineHelpText>
        <label>Describe your history of diabetes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_drink_alcohol__c</fullName>
        <inlineHelpText>Do you drink alcohol?</inlineHelpText>
        <label>Do you drink alcohol?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_exercise_daily__c</fullName>
        <inlineHelpText>Do you exercise daily?</inlineHelpText>
        <label>Do you exercise daily?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_cough__c</fullName>
        <inlineHelpText>Do you have a cough?</inlineHelpText>
        <label>Do you have a cough?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_take_any_of_these_medications__c</fullName>
        <label>Do you take any of these medications?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Blood Thinners</fullName>
                </value>
                <value>
                    <fullName>Birth Control Pills or Implant</fullName>
                </value>
                <value>
                    <fullName>Steroids</fullName>
                </value>
                <value>
                    <fullName>Immunosuppression Medications</fullName>
                </value>
                <value>
                    <fullName>Insulin</fullName>
                </value>
                <value>
                    <fullName>Microneedling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_OTC_medications__c</fullName>
        <inlineHelpText>Do you take Aspirin, Ibuprofen, Motrin, or similar products?</inlineHelpText>
        <label>Do you use OTC medications?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_had_psychiatric_or_nerve_p__c</fullName>
        <label>Ever had Psychiatric or nerve problems?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_a_blood_clot__c</fullName>
        <inlineHelpText>Have you ever had a blood clot?</inlineHelpText>
        <label>Have you ever had a blood clot?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_arthritis__c</fullName>
        <label>Have you ever had arthritis?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_asthma__c</fullName>
        <label>Have you ever had asthma?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_bronchitis__c</fullName>
        <label>Have you ever had bronchitis?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_cancer__c</fullName>
        <label>Have you ever had cancer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_depression__c</fullName>
        <label>Have you ever had depression?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_diabetes__c</fullName>
        <label>Have you ever had diabetes?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_emphysema__c</fullName>
        <label>Have you ever had emphysema?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_epilepsy_seizures__c</fullName>
        <label>Have you ever had epilepsy/seizures?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_fluid_retention__c</fullName>
        <label>Have you ever had fluid retention?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_frequent_cold_sores__c</fullName>
        <label>Have you ever had frequent cold sores?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_hayfever__c</fullName>
        <label>Have you ever had hayfever?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_heart_disease__c</fullName>
        <label>Have you ever had heart disease?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_hepatitis__c</fullName>
        <label>Have you ever had hepatitis?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_high_blood_pressure__c</fullName>
        <label>Have you ever had high blood pressure?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_labored_breathing__c</fullName>
        <label>Have you ever had labored breathing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_liver_trouble__c</fullName>
        <label>Have you ever had liver trouble?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_migraine_headaches__c</fullName>
        <label>Have you ever had migraine headaches?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_severe_allergies__c</fullName>
        <label>Have you ever had severe allergies?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_stomach_problems__c</fullName>
        <label>Have you ever had stomach problems?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_stroke__c</fullName>
        <label>Have you ever had stroke?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_thrombophlebitis__c</fullName>
        <label>Have you ever had thrombophlebitis?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_thyroid_imbalance__c</fullName>
        <label>Have you ever had thyroid imbalance?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_had_anesthesia_complications__c</fullName>
        <label>Have you had anesthesia complications?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Cancer__c</fullName>
        <inlineHelpText>Has anyone in your immediate family had cancer?</inlineHelpText>
        <label>History of Cancer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_diabetes__c</fullName>
        <inlineHelpText>Do you have a history of diabetes or pre diabetes?</inlineHelpText>
        <label>History of diabetes?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_poor_scaring__c</fullName>
        <inlineHelpText>Do you have a history of poor or bad scarring?</inlineHelpText>
        <label>History of poor scaring?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latex_betadine_or_tape_allergy__c</fullName>
        <inlineHelpText>Do you have a latex, betadine, or tape allergy?</inlineHelpText>
        <label>Latex, betadine, or tape allergy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Medical Questionnaires</relationshipLabel>
        <relationshipName>Medical_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_any_other_current_medications__c</fullName>
        <label>List any other current medications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_current_medical_conditions__c</fullName>
        <description>Are you currently being treated for any medical conditions?</description>
        <inlineHelpText>Are you currently being treated for any medical conditions?</inlineHelpText>
        <label>List current medical conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_your_OTC_meds__c</fullName>
        <description>Do you take Aspirin, Ibuprofen, Motrin, or similar products?</description>
        <inlineHelpText>Do you take Aspirin, Ibuprofen, Motrin, or similar products?</inlineHelpText>
        <label>List your OTC meds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Medical Questionnaires</relationshipLabel>
        <relationshipName>Medical_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Substances_Type_How_Often__c</fullName>
        <label>Other substances (type &amp; how often)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_substance_use__c</fullName>
        <label>Do you use other substances?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_operations__c</fullName>
        <inlineHelpText>Have you had any previous operations including plastic surgery?</inlineHelpText>
        <label>Previous operations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problems_scarring__c</fullName>
        <inlineHelpText>Has anyone in your immediate family had problems scarring?</inlineHelpText>
        <label>Problems scarring?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recreational_Drug_use__c</fullName>
        <inlineHelpText>Do you occasionally use recreational drugs?</inlineHelpText>
        <label>Recreational drug use?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;In Progress&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tobacco_Use_Type_How_Often__c</fullName>
        <label>Tobacco use (Type &amp; How Often)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tobacco_use_nicotine_products__c</fullName>
        <label>Tobacco use (nicotine products)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <label>Medical Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MQ-{00000}</displayFormat>
        <label>Medical Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>